--- a/private_diary/accounts/templates/account/password_reset_done.html
+++ b/private_diary/accounts/templates/account/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account_base.html" %}
 {% block title %}Password reset done{% endblock %}
 {% block contents %}
 <div class="container">
