--- a/private_diary/diary/templates/html/index_org.html
+++ b/private_diary/diary/templates/html/index_org.html
@@ -1,31 +1,9 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block title %}トップページ{% endblock %}
-{% block css %}<link rel="stylesheet" href="{% static 'diary/form.css' %}">{% endblock %}
-{% block header %}
-<h1 id="logo">SAMPLE 株式会社　お問合せフォーム</h1>
-{% endblock%}
-{% block content%}
 <div class="Form">
-<form method="post">
-  {% csrf_token %}
-
-  {% for field in form %}
     <div class="Form-Item">
-      <p class="Form-Item-Label">
-        {{ field.label_tag }}
-        <!-- <span class="Form-Item-Label-Required">必須</span> -->
-      </p>
-      {{field}}
-      {{field.errors}}
+      <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>お名前</p>
+      <input type="text" class="Form-Item-Input" placeholder="例）山田太郎">
     </div>
-  {% endfor %}
-
-  <button type="submit" class="Form-Button">送信</button>
-</form>
-</div>
-{% endblock %}
-    <!-- <div class="Form-Item">
+    <div class="Form-Item">
       <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>電話番号</p>
       <input type="text" class="Form-Item-Input" placeholder="例）000-0000-0000">
     </div>
@@ -38,4 +16,4 @@
       <textarea class="Form-Item-Textarea"></textarea>
     </div>
     <input type="submit" class="Form-Btn" value="送信する">
-  </div> -->
+  </div>
